--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=Tracker
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:3xppUWPTrmRLAHahkrpT4SV9eZ9It7RKQ5xOFcEY26Q=
 APP_DEBUG=true
 APP_URL=http://localhost
 
